Fix IndexOutOfBounds exception  causing analyzer to fail